--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,10 +5,10 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 5rem auto;
+  margin: 1rem;
 
   .form-generator {
-    width: 80%;
+    width: 100%;
     max-width: 600px;
   }
 
