--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,6 +7,12 @@ main {
   justify-content: center;
   margin: 1rem;
 
+  @media (max-width: 576px) {
+    main {
+      margin: 5rem 0.5rem
+    }
+  }
+
   .form-generator {
     width: 100%;
     max-width: 600px;
