--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,11 +5,12 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  margin: 1rem;
 
   .form-generator {
     width: 100%;
     max-width: 600px;
-    margin: 1rem;
   }
 
   .form {
